Fix Header resize jumpiness onScroll

--- a/app/views/styles/main.less
+++ b/app/views/styles/main.less
@@ -26,31 +26,30 @@ body, html {
 .ApplicationBody{
   .flex-class();
   flex-direction: column;
-  overflow:hidden;
-  overflow-y: scroll;
   position:relative;
-
   .ApplicationHeader {
     background-color: #111;
     flex-grow: 0;
     transition: all .3s ease;
     &.small {
-      position:fixed;
-      top:0;
       min-height:60px;
       background-color: rgba(0,0,0,.95);
     }
-
     &.large {
       min-height:150px;
       background-color: rgba(128, 0, 128, 1.00);
     }
-
   }
 
   .AppView {
     flex:1;
     display: flex;
+    overflow:hidden;
+    overflow-y: scroll;
+    p {
+      font-size:18px;
+      line-height:30px;
+    }
   }
 }
 
@@ -62,12 +61,9 @@ body, html {
   background-color: #111;
 }
 .header-scroll {
-    width:100%;
-    -ms-transition:     all 0.3s ease-out;
-    -moz-transition:    all 0.3s ease-out;
-    -webkit-transition: all 0.3s ease-out;
-    -o-transition:      all 0.3s ease-out;
-    transition:         all 0.3s ease-out;
+  width:100%;
+  -webkit-transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
 }
 .scroll3::-webkit-scrollbar {
   background: rgba(128, 78, 198, .5);
